--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,5 +7,5 @@ RUN dotnet publish server.csproj -c Release -o out
 
 FROM microsoft/dotnet:2.2-aspnetcore-runtime AS runtime
 WORKDIR /app
-COPY — from=build /app/out ./
-ENTRYPOINT [“dotnet”, server.dll”]`
+COPY --from=build /app/out ./
+ENTRYPOINT ["dotnet", "server.dll"]
