--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod=true --aot=true",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -18,7 +18,9 @@
     "@angular/forms": "~8.1.0",
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
+    "@angular/pwa": "^0.803.5",
     "@angular/router": "~8.1.0",
+    "@angular/service-worker": "~8.1.0",
     "@aspnet/signalr": "^1.1.4",
     "@clr/angular": "^2.1.2",
     "@clr/icons": "^2.1.2",
